--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Bookmarks#new</h1>
-<p>Find me in app/views/bookmarks/new.html.erb</p>
+<div class="container d-flex justify-content-center flex-wrap">
+  <div class="mt-3 w-50">
+    <%= render "form", bookmark: @bookmark %>
+  </div>
+</div>
