--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+
 .banner {
   background-size: cover;
   background-position: center;
@@ -18,4 +20,19 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.index-banner {
+  display: flex;
+  height: 40vh;
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset-url('cinema-background.jpg');
+  background-size: cover;
+  background-position: 30% 60%;
+  align-items: center;
+  justify-content: center;
+  h1 {
+    color: white;
+    font-family: 'Josefin Sans', sans-serif;
+    text-shadow: 2px 2px 4px rgba(0,0,0,1);
+  }
 }
