Add image upload

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -2,6 +2,7 @@
   <h2>Add a new list:</h2>
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit class: 'btn btn-primary mt-2' %>
   <% end %>
 </div>
