--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,8 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://source.unsplash.com/featured/?movie); height: 40vh">
+<% if @list.photo.attached? %>
+  <div class="card-list m-0" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, crop: :fill %>')">
+<% else %>
+  <div class="card-list m-0" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://source.unsplash.com/featured/?movie)">
+<% end %>
   <div class="container text-center">
     <h1 style="font-size: 4em"><%= @list.name %></h1>
     <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-secondary mt-3 rounded" %>
@@ -7,8 +11,8 @@
 <div class="container">
   <div class="card-group">
     <% @list.bookmarks.each do |bookmark| %>
-      <div class="col-4">
-        <div class="card my-4">
+      <div class="col-4 my-4">
+        <div class="card h-100">
           <%= image_tag "#{bookmark.movie.poster_url}", alt: "poster", class: "card-img-top" %>
           <div class="card-body border">
             <h5 class="card-title"><%= bookmark.movie.title %> - <%= bookmark.movie.rating %> <i class="fas fa-star" style="color: #FEE119"></i></h5>
