--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,10 +4,14 @@
   </div>
 </div>
 
-<div class="row justify-content-center mt-4">
+<div class="row justify-content-center m-4">
   <% @lists.each do |list| %>
     <div class="col-md-12 col-lg-4 col-xl-3">
-      <div class="card-list" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://source.unsplash.com/featured/?movie">
+        <% if list.photo.attached? %>
+          <div class="card-list" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+        <% else %>
+          <div class="card-list" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://source.unsplash.com/featured/?movie)">
+        <% end %>
         <div class="list-details">
           <small class="movie-count"><%= list.movies.count %> movies</small>
           <h2><%= list.name %></h2>
