--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -36,3 +36,22 @@
     text-shadow: 2px 2px 4px rgba(0,0,0,1);
   }
 }
+
+.list-title {
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 4em;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+}
+
+.list-banner {
+  background-position: center;
+  position: relative;
+  width: 100%;
+  height: 40vh;
+  margin: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+}
