--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,18 +1,18 @@
 <% if @list.photo.attached? %>
-  <div class="card-list m-0" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, crop: :fill %>')">
+  <div class="m-0 list-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, crop: :fill %>')">
 <% else %>
-  <div class="card-list m-0" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(http://source.unsplash.com/featured/?movie)">
+  <div class="m-0 list-banner" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(http://source.unsplash.com/featured/?movie)">
 <% end %>
   <div class="container text-center">
-    <h1 style="font-size: 4em"><%= @list.name %></h1>
-    <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-secondary mt-3 rounded" %>
+    <h1 class="list-title"><%= @list.name %></h1>
   </div>
 </div>
-<div class="container">
+<div class="container text-center">
+  <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-secondary mt-3 rounded w-50" %>
   <div class="card-group">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="col-4 my-4">
-        <div class="card h-100">
+        <div class="card h-100 text-left">
           <%= image_tag "#{bookmark.movie.poster_url}", alt: "poster", class: "card-img-top" %>
           <div class="card-body border">
             <h5 class="card-title"><%= bookmark.movie.title %> - <%= bookmark.movie.rating %> <i class="fas fa-star" style="color: #FEE119"></i></h5>
