--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container text-center">
-  <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-secondary mt-3 rounded w-50" %>
+  <a href="#bookmark-form"><button class="btn btn-secondary mt-3 rounded w-50">Add a movie</button></a>
   <div class="card-group">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="col-4 my-4">
@@ -33,7 +33,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" id="bookmark-form">
   <ul class="list-group border p-3 mt-3">
     <h2 class="text-center">Add a movie</h2>
     <%= render "bookmarks/form", bookmark: @bookmark %>
