--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   padding: 8px 16px;
-  background: white;
+  background: rgba(191, 122, 48, 1);
   > i > p {
     font-family: 'Open Sans', sans-serif;
   }
