--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background-size: cover;
+  box-shadow: 4px 4px 8px rgba(0,0,0,0.3);
 }
 
 .list-link {
@@ -36,6 +37,10 @@
   font-size: 0.5em;
   border: 1px solid rgba($color: #000000, $alpha: 0.5);
   border-radius: 8px;
-  background-color: rgba($color: #ffffff, $alpha: 0.3);
+  background-color: rgba(153, 94, 31, 0.5);
   box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.card {
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
 }
