--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <%= link_to lists_path, class: "navbar-brand" do %>
+      <%= link_to lists_path, class: "navbar-brand text-white" do %>
         <i class="fas fa-ticket-alt"></i>
       <% end %>
 
@@ -25,10 +25,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <%= link_to "Home", lists_path, class: "nav-link" %>
+            <%= link_to "Home", lists_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Add List", new_list_path, class: "nav-link" %>
+            <%= link_to "Add List", new_list_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item dropdown">
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
